holding off until I can hopefully get access to the pf2e types

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,3 +1,4 @@
 {
-  
+  "BLOCKINITIATIVE.SettingsEnableInitiativeHandicapTitle" : "Enable Initiative Handicap",
+  "BLOCKINITIATIVE.SettingsEnableInitiativeHandicapHint" : "Block Initiative inherently puts enemies at a disadvantage. To offset this, enemies may be given a modifier to their initiative rolls."
 }
