maybe we use the image from the pf2e system?

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,7 @@
 {
   "BLOCKINITIATIVE.SettingsInitiativeHandicapTitle" : "Initiative Handicap",
   "BLOCKINITIATIVE.SettingsInitiativeHandicapHint" : "Block Initiative inherently puts enemies at a disadvantage. To offset this, players may be given a modifier to their initiative rolls (The recommended value is -3).",
-  
-  "BLOCKINITIATIVE.SortIntoBlocksButton" : "Sort combatants into blocks"
+
+  "BLOCKINITIATIVE.SortIntoBlocksButton" : "Sort combatants into blocks",
+  "BLOCKINITIATIVE.ReactionButton" : "Use a reaction"
 }
