fixed invalid strings/lang keys

--- a/lang/en.json
+++ b/lang/en.json
@@ -6,8 +6,8 @@
   "BLOCKINITIATIVE.ReactionButton" : "Use a reaction",
   "BLOCKINITIATIVE.HasReacted" : " has reacted.",
 
-  "BLOCKINITIAITVE.EnemiesAct" : "Enemies \n Act",
-  "BLOCKINITIAITVE.PlayersReact" : "Players \n React",
-  "BLOCKINITIAITVE.PlayersAct" : "Players \n Act",
-  "BLOCKINITIAITVE.EnemiesReact" : "Enemies \n React"
+  "BLOCKINITIATIVE.EnemiesAct" : "Enemies \n Act",
+  "BLOCKINITIATIVE.PlayersReact" : "Players \n React",
+  "BLOCKINITIATIVE.PlayersAct" : "Players \n Act",
+  "BLOCKINITIATIVE.EnemiesReact" : "Enemies \n React"
 }
