--- a/lang/en.json
+++ b/lang/en.json
@@ -9,5 +9,8 @@
   "BLOCKINITIATIVE.EnemiesAct" : "Enemies \n Act",
   "BLOCKINITIATIVE.PlayersReact" : "Players \n React",
   "BLOCKINITIATIVE.PlayersAct" : "Players \n Act",
-  "BLOCKINITIATIVE.EnemiesReact" : "Enemies \n React"
+  "BLOCKINITIATIVE.EnemiesReact" : "Enemies \n React",
+
+  "BLOCKINITIATIVE.PlayersCannotReact" : "Players cannot react during the Enemies Act phase, any reactions you wish to use will be made during the Players React phase.",
+  "BLOCKINITIATIVE.EnemiesCannotReact" : "Enemies cannot react during the Players Act phase, any reactions you wish to use will be made during the Enemies React phase."
 }
